# oreilly-reasoning-models

./: .cursorrules  .gitignore  Makefile  README.md  claude_ext_thinking.md  fixed_client_test_ollama_ai.py  main.py  o1_isnt_a_chat_model.md  openai_reasoning_best_practices.md  project-notes.md  pyproject.toml  simple_ollama_test.py  test_ollama_connection.py
notebooks/: Ollama-Deepseek-R1.ipynb  Ollama.ipynb  claude-extended-thinking-tutorial.ipynb  compiling-comparing-responses-with-reasoning-llms.ipynb  introduction-to-reasoning-models.ipynb  llm_model_comparison.csv  llm_model_comparison.py  openai-reasoning-models-tutorial.ipynb  reasoning_llms_decision_chart.py  using_reasoning_llms_with_tools.ipynb  working-with-o1-models.ipynb  working-with-o1.md  working-with-oseries-models.ipynb
notebooks/assets-resources/: Project - OReilly Course Thinking and Reasoning Models.md
notebooks/assets-resources/notes/: 01-what-defines-reasoning-models.md  02-how-reasoning-models-differ-from-traditional-llms.md  03-why-use-reasoning-models.md  04-what-matters-when-choosing-llm.md  05-what-are-reasoning-models-used-for.md  06-how-to-prompt-thinking-models.md  07-limitations-of-thinking-models.md  08-role-of-distilled-models.md  09-deepseek-r1-vs-o1.md  china_ai_state_q1_2025.md  how-deep-seekr1-was-trained.md  reasoning-llms-report.md  reasoning_llm_limitations.md  reasoning_models_summary.md  slides-outline.md
presentation/: presentation-rough-ai-generated-draft.html  presentation.html  script.txt
requirements/: requirements.in  requirements.txt
